--- a/ensimWebApp/src/main/resources/templates/fragments/fragment-sidebar-menu.html
+++ b/ensimWebApp/src/main/resources/templates/fragments/fragment-sidebar-menu.html
@@ -4,7 +4,7 @@
                 
                  <li><a> Stage <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="#">Dimension Stages à l'etranger</a></li>
+                      <li><a href="stage_etranger">Dimension Stages à l'etranger</a></li>
                       <li><a href="#">Dimension Stages ingénieurs</a></li>
                       <li><a href="#">Dimension Stages Techniciens</a></li>
                       <li><a href="#">Dimension Stages Ouvriers</a></li>
