--- a/ensimWebApp/src/main/resources/templates/login.html
+++ b/ensimWebApp/src/main/resources/templates/login.html
@@ -6,6 +6,11 @@
   </head>
 
 <body class="login">
+<!-- <nav class="navbar navbar-default">
+  <a class="navbar-brand">
+    <img src="/images/logoensim.png" alt="">
+  </a>
+</nav> -->
     <div>
       <a class="hiddenanchor" id="signin"></a>
 
